--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "projudi",
   "version": "1.0.0",
-  "main": "consultaCpf.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,4 +12,7 @@
   "dependencies": {
     "puppeteer": "^24.12.1"
   }
+  
 }
+
+
