--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "2.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "puppeteer install"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^5.1.0",
-    "puppeteer": "^22.6.3"
+    "puppeteer-core": "^22.6.3"
   }
 }
