Usa puppeteer completo com Chromium embutido

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "2.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "puppeteer install"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^5.1.0",
