Update package.json npx puppeter

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "puppeteer install"
+    "postinstall": "npx puppeteer install"
   },
   "dependencies": {
     "express": "^5.1.0",
